# si-ml-toolkit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/validation_risk_baseline/: README.md  learning_notes.md  project_brief.md  train_signal_integrity_model.py  visualize_results.py
examples/validation_risk_baseline/outputs/: model_report.md
eyescope-auto/: .gitignore  README.md
eyescope-auto/data/: batch_manifest.csv  sample_eye.csv
eyescope-auto/eyescope/: __init__.py  batch.py  mask.py  metrics.py  parser.py  report.py
eyescope-auto/reports/: batch_report.md  batch_summary.csv  sample_report.md
eyescope-auto/scripts/: run_analysis.py  run_batch.py
eyescope-auto/tests/: test_batch.py  test_metrics.py
src/siml/: __init__.py  features.py  io.py  viz.py
src/siml/channel/: __init__.py  eye.py  prbs.py  waveform.py
tests/: conftest.py  test_eye.py  test_features.py  test_io.py  test_prbs.py  test_viz.py  test_waveform.py
tests/fixtures/: ring_slot.s2p
