[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "siml"
version = "0.1.0"
description = "Machine learning toolkit for signal integrity analysis"
requires-python = ">=3.11"
dependencies = [
    "scikit-rf>=1.12",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
